--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,11 @@
 name: "Lint Python code"
 on:
   push: # Only execute pipeline on push to main branch
-    - master
+    branches:
+      - master
   pull_request:
-    - master 
+    branches:
+      - master 
 
 jobs: 
   lint: # Name of the job
