--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,10 +2,10 @@ name: "Lint Python code"
 on:
   push: # Only execute pipeline on push to main branch
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master 
+      - main 
 
 jobs: 
   lint: # Name of the job
