--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
         run: |
           python -m pip install -r requirements.txt
       - name: Launch the unit tests
-        run: pytest
+        run: python -m pytest
