--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,14 @@ on:
 
 jobs: 
   test: # Name of the job
-    runs-on : ubuntu-latest # The job will run on the latest version of Ubuntu
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.13"] # Specify the Python versions to test against
+        os: ["ubuntu-latest", "windows-latest"] # Specify the OS to test against
+    runs-on : ${{ matrix.os }} # The job will run on the latest version of Ubuntu
     steps: 
       - uses: actions/checkout@v4 
+      - name: Set up Python ${{ matrix.python-version }}
       - uses: actions/setup-python@v5
         with: 
           python-version: "3.13" # Specify the Python version to use
