--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           mkdir -p public
           mv index.html public/index.html
-      - uses: actions/upload.pages-artifact@v3
+      - uses: actions/upload-pages-artifact@v3
         with:
           path:
             ./public
